# gaypexext

./: CMakeLists.txt
src/: charfix.h  console.cc  console.h  driver.cc  driver.h  globals.h  legacy.h  main.cc  overlay.cc  overlay.h  style.h  utils.cc  utils.h  vmprotect.h
src/activation/: SlimMem.cc  SlimMem.h  activation.cc  activation.h
src/features/: base.cc  base.h
src/imgui/: imgui.cc  imgui_impl_win32.cc
src/sdk/: entity.h  sdk.h  structs.h  w2s.h
src/sdk/structs/: matrix.h  vector.h
